# ViT-SJTU-captcha

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  README_zh-CN.md  dataset.py  requirements.txt  segment.py  split.py
v1/: acc_fps_test.py  inference.py  main.py
v2/: acc_fps_test.py  dataset.py  inference.py  main.py  model.py  segment.py  split.py
v3/: README.md  README_zh-CN.md
v3/deploy/: acc_fps_test.py  convert_pth_to_gguf.py
v3/deploy/csrc/: CMakeLists.txt  segment.cpp  segment.h  vit_captcha.cpp  vit_captcha.h
v3/deploy/csrc/tests/: segment_test.cpp  vit_captcha_test.cpp
v3/train/: acc_fps_test.py  dataset.py  model.py  segment.py  split.py  train.py
